--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 
     {% seo %}
 
-    <link rel="icon" href="https://admirelight.com/img/admirelight.png" type="image/x-icon" title="Admirelight">
+    <link rel="icon" href="https://admirelight.com/img/logo1.png" type="image/x-icon" title="Admirelight">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
