--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,6 +3,6 @@ layout: default
 ---
 
 <h1>{{ page.title }}</h1>
-<p>{{ page.date | date: %Y-%m-&d }} - {{ page.author }}</p>
+<p>{{ page.date | date_to_xmlschema }}{{ page.date | date: %Y-%m-&d }} - {{ page.author }}</p>
 
 {{ content }}
