--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 
     {% seo %}
 
-    <link rel="icon" href="https://imgcdn.admirelight.com/img/f1b0bdef-9149-4f6d-94c4-fe0bd16941e0.png" type="image/x-icon" title="Admirelight">
+    <link rel="icon" href="https://b2.nanking.top/img/nk.png" type="image/x-icon">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
