--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 
     {% seo %}
 
-    <link rel="icon" href="https://b2.nanking.top/img/Nanking.png" type="image/x-icon">
+    <link rel="icon" href="https://b2.nanking.top/pic/other/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="{{ '/assets/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
     
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
